# fmu-sumo-sim2sumo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  README.md  README.rst  SECURITY.md  pyproject.toml  pyproproject.toml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: build_docs.yaml  linting_and_formatting.yaml  run_tests.yaml
docs/: api.rst  conf.py  config.rst  developers.rst  grid.rst  index.rst  sim2sumo.rst
docs/apiref/: modules.rst  sim2sumo.rst  sim2sumo.sim2sumo.rst
src/fmu/sumo/: sim2sumo.py
src/fmu/sumo/config_jobs/: SIM2SUMO
src/fmu/sumo/sim2sumo/: __init__.py  _dataclasses.py  _special_treatments.py  _units.py  common.py  config.py  grid3d.py  main.py  sim2sumo.py  tables.py  toolkit.py
src/fmu/sumo/sim2sumo/_tools/: export_blocked_md_and_zones.txt
src/fmu/sumo/sim2sumo/config_jobs/: SIM2SUMO_CONFIG_DEPRECATED
src/fmu/sumo/sim2sumo/forward_models/: __init__.py
src/fmu/sumo/sim2sumo/hook_implementations/: jobs.py
tests/: conftest.py  test-testlogin.py  test_config.py  test_dataclasses.py  test_drogon_vfp.py  test_functions.py  test_standard_results.py  test_toolkit.py  test_w_drogon.py  test_w_oscar.py  test_with_ert.py
tests/data/: 2_r001_reek--rft.csv  eightcells--init-fipnum.roff
tests/data/drogon/: rft.csv
tests/data/drogon/realization-0/iter-0/eclipse/include/schedule/vfp/: K-1H_inj.Ecl
tests/data/drogon/realization-0/iter-0/eclipse/model/: DROGON-0.DATA  DROGON-0.RFT
tests/data/drogon/realization-0/iter-0/rms/output/wells/: blocked_md_and_zonelog.csv
tests/data/oscar/realization-0/iter-0/eclipse/: model∕ms-qa-export__prediction_wells.txt
tests/data/oscar/realization-0/iter-0/eclipse/include/schedule/: OOZI_2039.sch  compdat_gi.sch  compdat_op.sch  compdat_wi.sch  drilling_schedule.sch  dst_central_compdat.sch  dst_central_wconhist.sch  dst_hanssen_compdat.sch  dst_hanssen_wconhist.sch  gefac.sch  gefac_op.sch  gefac_wi.sch  matrix_injection_calc.sch  network.sch  rptsched.sch  wellcontrol.sch  wi_frac_actions.sch  wisting.sch  wpimult.sch  wtest.sch
tests/data/oscar/realization-0/iter-0/eclipse/include/schedule/vfp/: 12inch_riser.Ecl  14inch_riser.Ecl  1600m_horisontal.Ecl  2500m_horisontal.Ecl  3700m_horisontal_Hanssen.Ecl  3900m_horisontal.Ecl  3983m_horisontal_10inch.Ecl  900m_horisontal.Ecl  mpp_1x50_1x10_pump.ecl  mpp_1x50_pump.ecl  mpp_2x50_1x10_pump.ecl  mpp_2x50_pump.ecl  mpp_3x50_pump.ecl  vfpinj.inc  vfpprod.inc  wisting_mpp_vlp_1pump_min10bara.Ecl  wisting_mpp_vlp_2pumps_min10bara.Ecl  wisting_mpp_vlp_3pumps_min10bara.Ecl  wisting_mpp_vlp_3pumps_min15bara.Ecl
tests/data/oscar/realization-0/iter-0/eclipse/model/: OSCAR-0.DATA  OSCAR-0.SMSPEC
tests/data/oscar/realization-0/iter-0/fmuconfig/output/: global_variables.yml
tests/data/oscar/share/metadata/: fmu_case.yml
tests/data/reek/: zones.lyr
tests/data/reek/realization-0/iter-0/: parameters.txt
tests/data/reek/realization-0/iter-0/eclipse/model/: EIGHTCELLS.DATA
tests/data/reek/realization-0/iter-0/fmuconfig/output/: global_variables.yml  global_variables_w_eclpath_and_extras.yml
tests/data/reek/realization-0/iter-0/share/results/tables/: .2_r001_reek--rft.csv.yml  .2_r001_reek--wellconnstatus.csv.yml  2_r001_reek--wellconnstatus.csv
tests/data/reek/realization-1/iter-0/: parameters.txt
tests/data/reek/realization-1/iter-0/fmuconfig/output/: global_variables.yml  global_variables_w_eclpath.yml  global_variables_w_eclpath_and_extras.yml
tests/data/reek/share/metadata/: fmu_case.yml  rowh_case.yml  sumo_parent_id.yml
