[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.isort]
profile = "black"

[tool.black]
line-length = 79

[project]
name = "fmu-sumo-sim2sumo"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
  "sumo-wrapper-python>=1.0.3",
  "fmu-dataio",
  "opm>=2020.10.2",
  "res2df",
  "xtgeo",
  "pandas",
  "arrow",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["pytest", "black", "flake8"]
nokomodo = ["ert"]

docs = [
  "sphinx==6.2.1",
  "sphinx-rtd-theme",
  "autoapi",
  "sphinx-autodoc-typehints",
  "sphinxcontrib-apidoc",
]

[tool.setuptools.packages.find]
where = ["src"]


[project.scripts]
sim2sumo = "fmu.sumo.sim2sumo.main:main"

[project.entry-points.ert]
fmu_sumo_sim2sumo_jobs = "fmu.sumo.sim2sumo.hook_implementations.jobs"
