[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fmu-sumo-sim2sumo"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
  "sumo-wrapper-python>=1.0.24",
  "fmu-dataio",
  "opm>=2020.10.2",
  "res2df",
  "xtgeo",
  "pandas",
  "arrow",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["pytest", "ruff", "pre-commit"]
all = [
  "ert",
  # Note: sim2sumo is dependent on fmu-sumo-uploader, but it is not installed by default.
  #       The uploader version is specified by Komodo and sim2sumo should not override this.
  "fmu-sumo-uploader @ git+https://git@github.com/equinor/fmu-sumo-uploader",
]

docs = [
  "sphinx==6.2.1",
  "sphinx-rtd-theme",
  "autoapi",
  "sphinx-autodoc-typehints",
  "sphinxcontrib-apidoc",
]

[tool.setuptools.packages.find]
where = ["src"]


[project.scripts]
sim2sumo = "fmu.sumo.sim2sumo.main:main"

[project.entry-points.ert]
fmu_sumo_sim2sumo_jobs = "fmu.sumo.sim2sumo.hook_implementations.jobs"

[tool.ruff]
exclude = [".env", ".git", ".github", ".venv", "venv"]

line-length = 79

[tool.ruff.lint]
ignore = ["E501", "N802"]

extend-select = [
  "C4",  # Flake8-comprehensions
  "I",   # isort
  "SIM", # Flake8-simplify
  "TC",  # Flake8-type-checking
  "TID", # Flake8-tidy-imports
  "N",   # pep8-naming  
  "PD",  # Pandas
  "NPY", # NumPy
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
