[metadata]
name = fmu-sumo-sim2sumo
description = a Python library for extracting results from reservoir simulators to sumo
long_description = file: README.rst
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/equinor/fmu-sumo-sim2sumo
author = Equinor
author_email=dbs@equinor.com,
license = apache 2.0
license_file = LICENCE
classifiers =
    Development Status :: 5 - Development/Experimental
    Environment :: Console
    Environment :: MacOS X
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    # Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
    # Documentation = https://screed.readthedocs.io
    Source = https://github.com/equinor/fmu-sumo-sim2sumo
    Tracker = https://github.com/equinor/fmu-sumo-sim2sumo/issues


[options]
zip_safe = False
package_dir =
    = src
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.8
install_requires =
    urllib3 <2.0
    ert
    opm
    ecl2df
    fmu-sumo-uploader
    fmu-dataio
    pandas
    pyarrow
    sumo-wrapper-python
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sim2sumo = fmu.sumo.sim2sumo.sim2sumo:main
